--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -876,154 +876,7 @@
 		</div>
 	</div>
 	<div class="main-pt-32-pb-16">
-		<div class="about main-p-32-0">
-			<div class="container">
-				<p class="text-huge p-16">Популярные блогеры о Toplash.</p>
-				<div class="stories js-stories">
-					<div class="stories__scroll">
-						<div class="about__scroll horizontalScroller">
-							<div class="scroll" data-scroll-id="3">
-								<div class="scroll__body">
-									<ul class="scroll__scroll">
-										<li class="scroll__item">
-											<div class="about__item" data-id="0">
-												<img src="img/other/08.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="1">
-												<img src="img/other/02.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="2">
-												<div class="about__news">
-													<img src="img/other/01.jpg" alt="">
-													<div class="about__text">
-														<p class="text-big mb-16">до/после</p>
-														<p class="text-big about__photoCount">6 фото</p>
-													</div>
-												</div>
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="3">
-												<img src="img/other/04.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="4">
-												<img src="img/other/05.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="5">
-												<img src="img/other/v-04.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="6">
-												<img src="img/other/07.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="7">
-												<img src="img/other/10.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="8">
-												<img src="img/other/11.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="9">
-												<img src="img/other/12.jpg" alt="">
-											</div>
-										</li>
-										<li class="scroll__item">
-											<div class="about__item" data-id="10">
-												<img src="img/other/v-06.jpg" alt="">
-											</div>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="stories__body">
-						<button class="btnRound sliderBtn btn-close js-close-stories">
-							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#close"/></svg>
-						</button>
-						<button class="btnRound sliderBtn btn-prev">
-							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
-						</button>
-						<button class="btnRound sliderBtn btn-next">
-							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
-						</button>
-						<div class="stories__slider js-sliderStories">
-							<div class="stories__item" data-id="0">
-								<img data-lazy="img/other/08.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="1">
-								<img data-lazy="img/other/02.jpg" src="" alt="">
-								<div class="stories__link">
-									<a href="" class="btn p10 w-100"><span>Хочу так же!</span></a>
-								</div>
-							</div>
-							<div class="stories__item" data-id="2" data-sub-id="0">
-								<img data-lazy="img/other/01.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="2" data-sub-id="1">
-								<img data-lazy="img/other/01_v2.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="2" data-sub-id="2">
-								<img data-lazy="img/other/01_v3.jpg" src="" alt="">
-								<div class="stories__link">
-									<a href="" class="btn p10 w-100"><span>Хочу так же!</span></a>
-								</div>
-							</div>
-							<div class="stories__item" data-id="3">
-								<img data-lazy="img/other/04.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="4">
-								<img data-lazy="img/other/05.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="5" data-sub-id="0">
-								<video disablepictureinpicture src="video/v-04.mp4"></video>
-							</div>
-							<div class="stories__item" data-id="5" data-sub-id="1">
-								<video disablepictureinpicture src="video/v-05.mp4"></video>
-								<div class="stories__link">
-									<a href="" class="btn p10 w-100"><span>Хочу так же!</span></a>
-								</div>
-							</div>
-							<div class="stories__item" data-id="6">
-								<img data-lazy="img/other/07.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="7" data-sub-id="0">
-								<img data-lazy="img/other/10.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="7" data-sub-id="1">
-								<img data-lazy="img/other/10_v2.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="8">
-								<img data-lazy="img/other/11.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="9">
-								<img data-lazy="img/other/12.jpg" src="" alt="">
-							</div>
-							<div class="stories__item" data-id="10">
-								<video disablepictureinpicture src="video/6.mp4"></video>
-								<div class="stories__link">
-									<a href="" class="btn p10 w-100"><span>Хочу так же!</span></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		@@include('blocks/productPage/stories.html')
 		<div class="feedback">
 			<div class="container main-p-32-16">
 				<p class="p-16-0 text-huge">Отзывы и обзоры:</p>
@@ -1081,7 +934,7 @@
 							</div>
 							<div class="imageFeedback__item">
 								<div class="imageFeedback__wrap">
-									<video disablepictureinpicture src="video/v-01.mp4" mute></video>
+									<video playsinline poster="img/other/p-01.jpg" disablepictureinpicture src="video/v-01.mp4" mute></video>
 								</div>
 							</div>
 						</div>
@@ -1121,7 +974,7 @@
 							</div>
 							<div class="imageFeedback__item">
 								<div class="imageFeedback__wrap">
-									<video disablepictureinpicture src="video/v-02.mp4" mute></video>
+									<video playsinline poster="img/other/p-02.jpg" disablepictureinpicture src="video/v-02.mp4" mute></video>
 								</div>
 							</div>
 							<div class="imageFeedback__item">
@@ -1298,8 +1151,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="main-p-32-0 f-jcc-aic">
-			<button class="btn btn-inv js-goto-top">Вернуться наверх</button>
+		<div class="main-p-32-16 f-jcc-aic">
+			<button class="btn btn-inv js-goto-top md4-w-100">Вернуться наверх</button>
 		</div>
 	</div>
 	@@include('blocks/common/footer.html')
