--- a/#src/reviews.html
+++ b/#src/reviews.html
@@ -114,7 +114,7 @@
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<video disablepictureinpicture src="video/v-01.mp4" mute></video>
+								<video playsinline poster="img/other/p-01.jpg" disablepictureinpicture src="video/v-01.mp4" mute></video>
 							</div>
 						</div>
 					</div>
@@ -125,7 +125,6 @@
 					<div class="f-aic">
 						<div class="userImage notImage mr-16">
 							<span>О</span>
-							<!-- <img src="img/people/02.jpg" alt=""> -->
 						</div>
 						<p class="text-extra-small">Ольга Димитриченко</p>
 					</div>
@@ -154,7 +153,7 @@
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<video disablepictureinpicture src="video/v-02.mp4" mute></video>
+								<video playsinline poster="img/other/p-02.jpg" disablepictureinpicture src="video/v-02.mp4" mute></video>
 							</div>
 						</div>
 						<div class="imageFeedback__item">
