--- a/#src/warranty.html
+++ b/#src/warranty.html
@@ -25,7 +25,7 @@
 						<button class="btn">Заполнить форму возврата</button>
 					</div>
 					<div class="warrantyWork__image">
-						<img src="img/guarantee/01.jpg" alt="">
+						<img src="img/guarantee/rose-hand-1.jpg" alt="">
 					</div>
 				</div>
 			</div>
