--- a/#src/bonus-program.html
+++ b/#src/bonus-program.html
@@ -97,8 +97,8 @@
 			</div>
 		</div>
 		<div class="easyEarn main-p-32-0">
-			<div class="easyEarn__row">
-				<div class="easyEarn__col">
+			<div class="d-flex-md3-w">
+				<div class="col-2 p-16">
 					<div class="easyEarn__card">
 						<div class="image-hw-80">
 							<img class="w80" src="img/other/credit-card_1.png" alt="">
@@ -107,7 +107,7 @@
 						<svg class="easyEarn__tail"><use xlink:href="img/sprite/icons-sprite.svg#tail"/></svg>
 					</div>
 				</div>
-				<div class="easyEarn__col">
+				<div class="col-2 p-16">
 					<div class="nlc-mb-16">
 						<p class="text-huge">Легкий способ заработать!</p>
 						<p class="text-medium">Что для этого нужно? Все просто:</p>
