--- a/#src/home.html
+++ b/#src/home.html
@@ -948,8 +948,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>К</span>
 											<img src="img/people/03.jpg" alt="">
+											<span>К</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Кристина Боломон</p>
@@ -981,8 +981,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>М</span>
 											<img src="img/people/01.jpg" alt="">
+											<span>М</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Мирослава Курильская</p>
@@ -1013,9 +1013,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>А</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>А</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Анна Хук</p>
@@ -1046,9 +1046,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>А</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>А</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Анаcтасия Кухаренко</p>
@@ -1079,9 +1079,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>Н</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>Н</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Николетта</p>
@@ -1113,8 +1113,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>К</span>
 											<img src="img/people/03.jpg" alt="">
+											<span>К</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Кристина Боломон</p>
@@ -1146,8 +1146,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>М</span>
 											<img src="img/people/01.jpg" alt="">
+											<span>М</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Мирослава Курильская</p>
@@ -1178,9 +1178,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>А</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>А</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Ана Хук</p>
@@ -1211,9 +1211,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>М</span>
+										<div class="userImagee mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>М</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Марина Таскова</p>
