--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -239,8 +239,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>К</span>
 											<img src="img/people/03.jpg" alt="">
+											<span>К</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Кристина Боломон</p>
@@ -272,8 +272,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>М</span>
 											<img src="img/people/01.jpg" alt="">
+											<span>М</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Мирослава Курильская</p>
@@ -304,9 +304,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>А</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>А</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Анна Хук</p>
@@ -337,9 +337,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>А</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>А</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Анаcтасия Кухаренко</p>
@@ -370,9 +370,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>Н</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>Н</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Николетта</p>
@@ -404,8 +404,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>К</span>
 											<img src="img/people/03.jpg" alt="">
+											<span>К</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Кристина Боломон</p>
@@ -437,8 +437,8 @@
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
 										<div class="userImage mr-16">
-											<span>М</span>
 											<img src="img/people/01.jpg" alt="">
+											<span>М</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Мирослава Курильская</p>
@@ -469,9 +469,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>А</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>А</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Ана Хук</p>
@@ -502,9 +502,9 @@
 							<div class="cardReviews">
 								<div class="d-flex aifs jcsb">
 									<div class="f-aic">
-										<div class="userImage notImage mr-16">
-											<span>М</span>
+										<div class="userImage mr-16">
 											<!-- <img src="img/people/03.jpg" alt=""> -->
+											<span>М</span>
 										</div>
 										<div class="text-footnote mr-4">
 											<p class="mb-4">Марина Таскова</p>
@@ -884,8 +884,8 @@
 					<div class="f-jcsb-aic mb-16">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<span>К</span>
 								<img src="img/people/03.jpg" alt="">
+								<span>К</span>
 							</div>
 							<p class="text-extra-small">Кристина Желяскова</p>
 						</div>
@@ -943,9 +943,9 @@
 				<div class="feedback__item p-32-0">
 					<div class="f-jcsb-aic mb-16">
 						<div class="f-aic">
-							<div class="userImage notImage mr-16">
-								<span>О</span>
+							<div class="userImage mr-16">
 								<!-- <img src="img/people/02.jpg" alt=""> -->
+								<span>О</span>
 							</div>
 							<p class="text-extra-small">Ольга Димитриченко</p>
 						</div>
