--- a/#src/reviews.html
+++ b/#src/reviews.html
@@ -64,8 +64,8 @@
 				<div class="f-jcsb-aic mb-16">
 					<div class="f-aic">
 						<div class="userImage mr-16">
-							<span>К</span>
 							<img src="img/people/03.jpg" alt="">
+							<span>К</span>
 						</div>
 						<p class="text-extra-small">Кристина Желяскова</p>
 					</div>
@@ -123,7 +123,8 @@
 			<div class="feedback__item p-32-0">
 				<div class="f-jcsb-aic mb-16">
 					<div class="f-aic">
-						<div class="userImage notImage mr-16">
+						<div class="userImage mr-16">
+							<!-- <img src="img/people/03.jpg" alt=""> -->
 							<span>О</span>
 						</div>
 						<p class="text-extra-small">Ольга Димитриченко</p>
@@ -252,8 +253,8 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<span>К</span>
 								<img src="img/people/03.jpg" alt="">
+								<span>К</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Кристина Боломон</p>
@@ -285,8 +286,8 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<span>М</span>
 								<img src="img/people/01.jpg" alt="">
+								<span>М</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Мирослава Курильская</p>
@@ -317,9 +318,9 @@
 				<div class="cardReviews">
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
-							<div class="userImage notImage mr-16">
-								<span>А</span>
+							<div class="userImage mr-16">
 								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<span>А</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Ана Хук</p>
@@ -350,9 +351,9 @@
 				<div class="cardReviews">
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
-							<div class="userImage notImage mr-16">
-								<span>А</span>
+							<div class="userImage mr-16">
 								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<span>А</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Анаcтасия Кухаренко</p>
@@ -383,9 +384,9 @@
 				<div class="cardReviews">
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
-							<div class="userImage notImage mr-16">
-								<span>Н</span>
+							<div class="userImage mr-16">
 								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<span>Н</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Николетта</p>
@@ -417,8 +418,8 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<span>К</span>
 								<img src="img/people/03.jpg" alt="">
+								<span>К</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Кристина Боломон</p>
@@ -449,9 +450,9 @@
 				<div class="cardReviews">
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
-							<div class="userImage notImage mr-16">
-								<span>А</span>
+							<div class="userImage mr-16">
 								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<span>А</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Ана Хук</p>
@@ -482,9 +483,9 @@
 				<div class="cardReviews">
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
-							<div class="userImage notImage mr-16">
-								<span>М</span>
+							<div class="userImage mr-16">
 								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<span>М</span>
 							</div>
 							<div class="text-footnote mr-4">
 								<p class="mb-4">Марина Таскова</p>
