--- a/#src/home.html
+++ b/#src/home.html
@@ -887,366 +887,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container main-p-32-8">
-			<div class="p-8">
-				<p class="text-huge mb-8">Отзывы реальных девочек.</p>
-				<p class="text-medium darkGray">Все никак не можешь решиться? Начни отсюда.</p>
-			</div>
-			<div class="reviewCategory">
-				<div class="reviewCategory__row">
-					<div class="reviewCategory__col col-max">
-						<a href="" class="reviewCategory__item active">
-							<p class="text-big mb-8">Все отзывы</p>
-							<p class="text-extra-small">4 431</p>
-						</a>
-					</div>
-					<div class="reviewCategory__col">
-						<a href="" class="reviewCategory__item">
-							<img class="h24" src="img/reviewers/ozon.svg" alt="">
-							<p>4.8 <span class="darkGray">(479)</span></p>
-						</a>
-					</div>
-					<div class="reviewCategory__col">
-						<a href="" class="reviewCategory__item">
-							<img class="h24" src="img/reviewers/ym.svg" alt="">
-							<p>4.7 <span class="darkGray">(120)</span></p>
-						</a>
-					</div>
-					<div class="reviewCategory__col">
-						<a href="" class="reviewCategory__item">
-							<img class="h24" src="img/reviewers/WB.svg" alt="">
-							<p>4.7 <span class="darkGray">(94)</span></p>
-						</a>
-					</div>
-					<div class="reviewCategory__col">
-						<a href="" class="reviewCategory__item">
-							<img class="h24" src="img/reviewers/ir.png" alt="">
-							<p>4.4 <span class="darkGray">(739)</span></p>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="f-jcsb-aic p-8">
-				<button class="js-scroll-button btnRound btn-prev" data-scroll-id="2">
-					<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
-				</button>
-				<div class="user-select2-selection-once modify-selection">
-					<select class="js-select-once-modify" name="sortReviews" data-placeholder="">
-						<option value="rand">В случайном порядке</option>
-						<option value="series">Сначала последние</option>
-					</select>
-				</div>
-				<button class="js-scroll-button btnRound btn-next" data-scroll-id="2">
-					<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
-				</button>
-			</div>
-			<div class="scroll responsive" data-scroll-id="2">
-				<div class="scroll__body">
-					<ul class="scroll__scroll">
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<img src="img/people/03.jpg" alt="">
-											<span>К</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Кристина Боломон</p>
-											<p class="darkGray">01 апреля 2020</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="4"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor aut odit maxime possimus explicabo perspiciatis. Nemo cum veniam quibusdam.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/ozon.svg" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/01.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<img src="img/people/01.jpg" alt="">
-											<span>М</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Мирослава Курильская</p>
-											<p class="darkGray">22 мая 2021</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="5"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi praesentium, iusto temporibus ratione pariatur voluptas quod non reiciendis voluptates omnis odit aliquam laudantium, soluta dignissimos facilis beatae necessitatibus nemo quam reprehenderit aperiam commodi atque animi tempora! Minus sit, vel molestias.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/WB.svg" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/02.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<!-- <img src="img/people/03.jpg" alt=""> -->
-											<span>А</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Анна Хук</p>
-											<p class="darkGray">18 июля 2021</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="2"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor aut odit maxime possimus explicabo perspiciatis. Nemo cum veniam quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam beatae neque fugit vitae tempore ipsum natus atque commodi consequuntur, est hic ducimus voluptas suscipit id quibusdam laudantium et accusantium voluptates.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/ym.svg" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/03.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<!-- <img src="img/people/03.jpg" alt=""> -->
-											<span>А</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Анаcтасия Кухаренко</p>
-											<p class="darkGray">07 сентября 2020</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="3"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor aut odit maxime possimus explicabo perspiciatis. Nemo cum veniam quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam beatae neque fugit vitae tempore ipsum natus atque commodi consequuntur, est hic ducimus voluptas suscipit id quibusdam laudantium et accusantium voluptates.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/ir.png" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-01.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<!-- <img src="img/people/03.jpg" alt=""> -->
-											<span>Н</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Николетта</p>
-											<p class="darkGray">15 сентября 2019</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="3"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor aut odit maxime possimus explicabo perspiciatis.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/ir.png" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/02.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<img src="img/people/03.jpg" alt="">
-											<span>К</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Кристина Боломон</p>
-											<p class="darkGray">01 апреля 2020</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="4"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor aut odit maxime possimus explicabo perspiciatis. Nemo cum veniam quibusdam.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/ozon.svg" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/01.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<img src="img/people/01.jpg" alt="">
-											<span>М</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Мирослава Курильская</p>
-											<p class="darkGray">22 мая 2021</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="5"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/WB.svg" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/02.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImage mr-16">
-											<!-- <img src="img/people/03.jpg" alt=""> -->
-											<span>А</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Ана Хук</p>
-											<p class="darkGray">18 июля 2021</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="2"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/ym.svg" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/03.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="scroll__item">
-							<div class="cardReviews">
-								<div class="d-flex aifs jcsb">
-									<div class="f-aic">
-										<div class="userImagee mr-16">
-											<!-- <img src="img/people/03.jpg" alt=""> -->
-											<span>М</span>
-										</div>
-										<div class="text-footnote mr-4">
-											<p class="mb-4">Марина Таскова</p>
-											<p class="darkGray">07 сентября 2020</p>
-										</div>
-									</div>
-									<div class="js-rating rating" data-rating="3"></div>
-								</div>
-								<div class="cardReviews__content">
-									<div class="cardReviews__text">
-										<div class="textLay">
-											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor aut odit maxime possimus explicabo perspiciatis. Nemo cum veniam quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam beatae neque fugit vitae tempore ipsum natus atque commodi consequuntur, est hic ducimus voluptas suscipit id quibusdam laudantium et accusantium voluptates.</p>
-										</div>
-									</div>
-									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="cardReviews__footer f-jcsb-aic">
-										<a href="https://ssilka-na-sait-s-otzivami">
-											<img class="h24" src="img/reviewers/ir.png" alt="">
-										</a>
-										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/card/03.png" alt="">
-										</a>	
-									</div>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="p-8">
-				<a href="https://toplash.ru/reviews" class="btn btn-inv w-100">Читать все отзывы</a>
-			</div>
-		</div>
+		@@include('blocks/productPage/reviews.html')
 	</div>
 	<div class="result21">
 		<div class="container">
