--- a/#src/private.html
+++ b/#src/private.html
@@ -17,7 +17,7 @@
 		<p class="text-huge p-16">Личный кабинет</p>
 		<div class="d-flex md3-fww flexMod-1">
 			<div class="flexMod-1__colMin md3-colMax p-16">
-				<div class="card-v1 mod-md-p-16 bg-bgeen white f-jcsb fdc">
+				<div class="card-v1 mod-md-p-16 bg-green white f-jcsb fdc">
 					<div class="mb-16">
 						<div class="f-aic">
 							<img src="img/icon/money.png" alt="">
