--- a/#src/blog-item.html
+++ b/#src/blog-item.html
@@ -50,7 +50,7 @@
 					<div class="cardProduct nlc-mb-16">
 						<a href="" class="productItem">
 							<div class="image-hw-80">
-								<img class="w80" src="img/card/01.png" alt="">
+								<img src="img/card/01.png" alt="">
 							</div>
 							<div class="nlc-mb-4">
 								<p class="text-extra-small">Toplash lash & brow</p>
@@ -60,7 +60,7 @@
 						</a>
 						<a href="" class="productItem">
 							<div class="image-hw-80">
-								<img class="w80" src="img/card/01.png" alt="">
+								<img src="img/card/01.png" alt="">
 							</div>
 							<div class="nlc-mb-4">
 								<p class="text-extra-small">Toplash brow gel</p>
@@ -70,7 +70,7 @@
 						</a>
 						<a href="" class="productItem">
 							<div class="image-hw-80">
-								<img class="w80" src="img/card/03.png" alt="">
+								<img src="img/card/03.png" alt="">
 							</div>
 							<div class="nlc-mb-4">
 								<p class="text-extra-small">Toplash Mascara</p>
@@ -80,7 +80,7 @@
 						</a>
 						<a href="" class="productItem">
 							<div class="image-hw-80">
-								<img class="w80" src="img/card/Eyeliner.jpg" alt="">
+								<img src="img/card/Eyeliner.jpg" alt="">
 							</div>
 							<div class="nlc-mb-4">
 								<p class="text-extra-small">Toplash Eyeliner</p>
@@ -90,7 +90,7 @@
 						</a>
 						<a href="" class="productItem">
 							<div class="image-hw-80">
-								<img class="w80" src="img/other/011.jpg" alt="">
+								<img src="img/other/011.jpg" alt="">
 							</div>
 							<div class="nlc-mb-4">
 								<p class="text-extra-small">Toplash roller</p>
@@ -100,7 +100,7 @@
 						</a>
 						<a href="" class="productItem">
 							<div class="image-hw-80">
-								<img class="w80" src="img/set/01.jpg" alt="">
+								<img src="img/set/01.jpg" alt="">
 							</div>
 							<div class="nlc-mb-4">
 								<p class="text-extra-small">Toplash lash & brow set</p>
