--- a/#src/bonus-program.html
+++ b/#src/bonus-program.html
@@ -31,7 +31,7 @@
 							<p class="text-huge">Регистрируйтесь, что бы участвовать в бонусной программе</p>
 							<p>We are committed to creating thoughtful, modern hair care treatments that serve to empower and embrace natural beauty.</p>
 							<p>Always clean ingredients, backed by science and filled with passion.</p>
-							<button class="btn">Зарегистрироваться</button>
+							<button class="btn md4-w-100">Зарегистрироваться</button>
 						</div>
 						<div class="bottomLil">
 							<svg class="bottomLil__1"><use xlink:href="img/sprite/icons-sprite.svg#lil-2"/></svg>
@@ -101,7 +101,7 @@
 				<div class="col-2 p-16">
 					<div class="easyEarn__card">
 						<div class="image-hw-80">
-							<img class="w80" src="img/other/credit-card_1.png" alt="">
+							<img src="img/other/credit-card_1.png" alt="">
 						</div>
 						<div class="text-huge">150 рублей</div>
 						<svg class="easyEarn__tail"><use xlink:href="img/sprite/icons-sprite.svg#tail"/></svg>
