--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -74,8 +74,11 @@
 		</div>
 	</div>
 	@@include('blocks/common/footer.html')
+
+	@@include('blocks/fixedCard.html')
 	<script>
 		pathSprite = "img/sprite/icons-sprite.svg"; // Путь к спрайту с иконками
 	</script>
 </body>
 </html>
+
