--- a/#src/blocks/productPage/reviews.html
+++ b/#src/blocks/productPage/reviews.html
@@ -41,8 +41,8 @@
 		<button class="js-scroll-button btnRound btn-prev" data-scroll-id="2">
 			<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
 		</button>
-		<div class="user-select2-selection-once modify-selection">
-			<select class="js-select-once-modify" name="sortReviews" data-placeholder="">
+		<div class="select-once-1">
+			<select class="js-select-once-1" name="sortReviews" data-placeholder="">
 				<option value="rand">В случайном порядке</option>
 				<option value="series">Сначала последние</option>
 			</select>
