--- a/#src/blog-item.html
+++ b/#src/blog-item.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/select2.min.css">
-	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/slick.min.js"></script>
-	<script src="js/select2.min.js"></script>
-	<script src="js/script.js"></script>
-	<title>Toplash</title>
-</head>
+@@include('blocks/common/head.html',{
+	"title": "Toplash"
+})
 <body>
 	@@include('blocks/common/header.html')
 	<div class="paper container">
