--- a/#src/private.html
+++ b/#src/private.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/select2.min.css">
-	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/slick.min.js"></script>
-	<script src="js/select2.min.js"></script>
-	<script src="js/script.js"></script>
-	<title>Toplash</title>
-</head>
+@@include('blocks/common/head.html',{
+	"title": "Toplash"
+})
 <body>
 	@@include('blocks/common/header.html')
 	<div class="container">
@@ -58,7 +50,7 @@
 							<div class="js-validation-block">
 								<p class="mb-8">Телефон:</p>	
 								<div class="inputText hidePlaceholder">
-									<input class="_validate" data-validation-type='["req", "tel"]' type="text" autocomplete="off" name="tel" value="+7 123 456 789 0" placeholder=" " disabled>
+									<input class="_validate js-mask-tel" data-validation-type='["req", "tel"]' type="text" autocomplete="off" name="tel" value="+7 123 456 789 0" placeholder=" " disabled>
 									<label for="sv-input-name"></label>
 								</div>
 								<p class="js-validation-error mt-4 error"></p>
