--- a/#src/registration.html
+++ b/#src/registration.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/select2.min.css">
-	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/slick.min.js"></script>
-	<script src="js/select2.min.js"></script>
-	<script src="js/script.js"></script>
-	<title>Toplash</title>
-</head>
+@@include('blocks/common/head.html',{
+	"title": "Toplash"
+})
 <body>
 	@@include('blocks/common/header.html')
 	<div class="p-16-0-32-0 container">
@@ -33,7 +25,7 @@
 				</div>
 				<div class="js-validation-block">
 					<div class="inputText">
-						<input class="_validate" data-validation-type='["req", "tel"]' type="text" autocomplete="off" name="tel" placeholder=" ">
+						<input class="_validate js-mask-tel" data-validation-type='["req", "tel"]' type="text" autocomplete="off" name="tel" placeholder=" ">
 						<label>Телефон (нужен при заказе)</label>
 					</div>
 					<p class="js-validation-error mt-4 error"></p>
