--- a/#src/stamp.html
+++ b/#src/stamp.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/select2.min.css">
-	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/slick.min.js"></script>
-	<script src="js/select2.min.js"></script>
-	<script src="js/script.js"></script>
-	<title>Штамп</title>
-</head>
+@@include('blocks/common/head.html',{
+	"title": "Штамп"
+})
 <body>
 	@@include('blocks/common/header.html')
 	@@include('blocks/productPage/product.html', {"isPageSet": false})
@@ -57,7 +49,7 @@
 		@@include('blocks/productPage/stories.html')
 		@@include('blocks/productPage/feedback.html')
 		@@include('blocks/productPage/terms.html')
-		@@include('blocks/productPage/useful.html')
+		@@include('blocks/productPage/useful.html', {"pageIsInfo": false})
 		<div class="main-p-32-16 f-jcc-aic">
 			<button class="btn btn-inv js-goto-top md4-w-100">Вернуться наверх</button>
 		</div>
